<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.OrderFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tacos_order"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Spinner
        android:id="@+id/taco_spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_14"
        android:paddingStart="@dimen/dp_14"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <TextView
        android:id="@+id/tortilla_selector_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tortilla_selector"
        android:textSize="@dimen/dp_16"
        android:paddingTop="@dimen/dp_14"
        android:paddingStart="@dimen/dp_14"
        app:layout_constraintTop_toBottomOf="@id/taco_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <RadioGroup
        android:id="@+id/tortilla_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_14"
        app:layout_constraintTop_toBottomOf="@id/tortilla_selector_text"
        >
        <RadioButton android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corn_tortilla"/>
        <RadioButton android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheat_tortilla"/>
    </RadioGroup>

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_additional"
        android:paddingStart="@dimen/dp_14"
        android:paddingEnd="@dimen/dp_14"
        android:textSize="@dimen/dp_16"
        android:maxLines="10"
        android:lines="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tortilla_selector"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <Button
        android:id="@+id/button_add"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/note"
        app:layout_constraintEnd_toStartOf="@id/guide"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/button_check"
        android:text="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/note"
        app:layout_constraintStart_toEndOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>